some final changes

--- a/review.html
+++ b/review.html
@@ -12,31 +12,29 @@
 </head>
 <body>
 
-    <main id="container">
-        <div id="title">
+   <main>
+        <div class="title">
             <h1>Our Reviews</h1>
-            <span id="blueBorder"></span>
+            <span class="underline"></span>
         </div>
 
-        <div id="subContainer">
-            <img id="authorFace" src="" alt="">
-            <h4 id="authorName">susan smith</h4>  
-            <h4 id="authorRole">web developer</h4>
-            <p id="authorDescription">I'm baby meggings twee health goth +1. Bicycle rights tumeric chartreuse <br>
-                    before they sold out chambray pop-up. Shaman humblebrag pickled <br>
-                 coloring book salvia hoodie, cold-pressed four dollar toast everyday carry</p>
-            <section id="prev_next">
-             <button id="buttonLeft"><span id="buttonLeft" class="material-symbols-outlined">
-                    chevron_left
-                    </span></button>   
-              <button id="buttonRight"><span id="buttonRight" class="material-symbols-outlined">
-                        chevron_right
-                        </span></button>        
+        <div class="container">
+            <img class="authorFace" src="" alt="">
+            <h4 class="authorName">Susan Smith</h4>
+            <h4 class="authorRole">WEB DEVELOPER</h4>
+            <p class="authorResume">
+                I'm baby meggings twee health goth +1. Bicycle rights tumeric chartreuse <br>
+                 before they sold out chambray pop-up. Shaman humblebrag pickled <br>
+                 coloring book salvia hoodie, cold-pressed four dollar toast everyday carry
+            </p>
+
+            <section class="btnsContainer">
+                <button id="prev" class="btnArrow material-symbols-outlined" type="button">arrow_back_ios</button>
+                <button id="foward"  class="btnArrow material-symbols-outlined" type="button">arrow_forward_ios</button>   
             </section>
-
-            <button id="supriseME">Surprise Me</button>  
+            <button class="btn_randomChoice">SurpriseMe</button>
         </div>
-    </main>
+   </main>
    
     <script src="review.js"></script>
 </body>
